tests/mapped_type_utilities/mapped_type_utilities.exp
Error ------------------------------------------------------------------------------------------------------ omit.js:7:7

Cannot get `noFoo.foo` because property `foo` is missing in `Omit` [1]. [prop-missing]

   omit.js:7:7
   7| noFoo.foo; // ERROR
            ^^^

References:
   omit.js:6:22
   6| declare const noFoo: OmitFoo;
                           ^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- omit.js:12:12

Cannot get `noFooOrBar.foo` because property `foo` is missing in `Omit` [1]. [prop-missing]

   omit.js:12:12
   12| noFooOrBar.foo; // ERROR
                  ^^^

References:
   omit.js:11:27
   11| declare const noFooOrBar: OmitFooAndBar;
                                 ^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- omit.js:13:12

Cannot get `noFooOrBar.bar` because property `bar` (did you mean `baz`?) is missing in `Omit` [1]. [prop-missing]

   omit.js:13:12
   13| noFooOrBar.bar; // ERROR
                  ^^^

References:
   omit.js:11:27
   11| declare const noFooOrBar: OmitFooAndBar;
                                 ^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- omit.js:30:9

Cannot get `noFoo.foo` because property `foo` is missing in `Omit` [1]. [prop-missing]

   omit.js:30:9
   30|   noFoo.foo; // ERROR: omitted
               ^^^

References:
   omit.js:28:24
   28|   declare const noFoo: OmitInterface;
                              ^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- omit.js:31:3

Cannot cast `noFoo` to object type because `Omit` [1] is not a subtype of object type [2]. Class instances are not
subtypes of object types; consider rewriting object type [2] as an interface. [class-object-subtyping]

   omit.js:31:3
   31|   noFoo as {bar: number; baz: number, ...}; // ERROR: interface not object
         ^^^^^

References:
   omit.js:28:24
   28|   declare const noFoo: OmitInterface;
                              ^^^^^^^^^^^^^ [1]
   omit.js:31:12
   31|   noFoo as {bar: number; baz: number, ...}; // ERROR: interface not object
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- omit.js:46:9

Cannot get `noFoo.foo` because property `foo` is missing in `Omit` [1]. [prop-missing]

   omit.js:46:9
   46|   noFoo.foo; // ERROR: omitted
               ^^^

References:
   omit.js:44:24
   44|   declare const noFoo: OmitInstance;
                              ^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- omit.js:47:3

Cannot cast `noFoo` to object type because `Omit` [1] is not a subtype of object type [2]. Class instances are not
subtypes of object types; consider rewriting object type [2] as an interface. [class-object-subtyping]

   omit.js:47:3
   47|   noFoo as {bar: number; baz: number, ...}; // ERROR: interface not object
         ^^^^^

References:
   omit.js:44:24
   44|   declare const noFoo: OmitInstance;
                              ^^^^^^^^^^^^ [1]
   omit.js:47:12
   47|   noFoo as {bar: number; baz: number, ...}; // ERROR: interface not object
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- omit.js:54:3

Cannot cast `x` to object type because property `foo` is read-only in `Omit` [1] but writable in object type [2].
[incompatible-variance]

   omit.js:54:3
   54|   x as {foo: 1}; // ERROR
         ^

References:
   omit.js:52:20
   52|   declare const x: Omit<{+foo: 1, bar: 2}, 'bar'>;
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   omit.js:54:8
   54|   x as {foo: 1}; // ERROR
              ^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- omit.js:65:43

Cannot instantiate `Omit` because property `xxx` is missing in object type [1] in type argument `Keys`. [prop-missing]

   omit.js:65:43
   65|   declare const x: Omit<{foo: 1, bar: 2}, 'xxx'>; // ERROR
                                                 ^^^^^

References:
   omit.js:65:25
   65|   declare const x: Omit<{foo: 1, bar: 2}, 'xxx'>; // ERROR
                               ^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- pick.js:8:10

Cannot assign `3` to `pickedO1.foo` because property `foo` is not writable. [cannot-write]

   8| pickedO1.foo = 3; // ERROR: foo is read-only
               ^^^


Error ------------------------------------------------------------------------------------------------------ pick.js:9:2

Cannot cast `pickedO1.bar` to string because undefined [1] is incompatible with string [2]. [incompatible-cast]

   pick.js:9:2
      9| (pickedO1.bar: string); // ERROR bar is optional
          ^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:3017:62
   3017| type Pick<O: interface {}, Keys: $Keys<O>> = {[key in Keys]: O[key]};
                                                                      ^^^^^^ [1]
   pick.js:9:16
      9| (pickedO1.bar: string); // ERROR bar is optional
                        ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ pick.js:9:2

Cannot cast `pickedO1.bar` to string because undefined [1] is incompatible with string [2]. [incompatible-cast]

   pick.js:9:2
   9| (pickedO1.bar: string); // ERROR bar is optional
       ^^^^^^^^^^^^

References:
   pick.js:1:32
   1| type O1 = {+foo: number, bar?: string};
                                     ^^^^^^ [1]
   pick.js:9:16
   9| (pickedO1.bar: string); // ERROR bar is optional
                     ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- pick.js:24:10

Cannot get `picked.bar` because property `bar` is missing in `Pick` [1]. [prop-missing]

   pick.js:24:10
   24|   picked.bar; // ERROR: wasn't picked
                ^^^

References:
   pick.js:22:25
   22|   declare const picked: PickInterface;
                               ^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- pick.js:36:10

Cannot get `picked.bar` because property `bar` is missing in `Pick` [1]. [prop-missing]

   pick.js:36:10
   36|   picked.bar; // ERROR: wasn't picked
                ^^^

References:
   pick.js:34:25
   34|   declare const picked: PickInstance;
                               ^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- record.js:5:2

Cannot cast `exact` to object type because property `bar` is extra in `Record` [1] but missing in object type [2]. Exact
objects do not accept extra props. [prop-missing]

   record.js:5:2
   5| (exact: {foo: number}); // ERROR, missing bar
       ^^^^^

References:
   record.js:3:22
   3| declare const exact: Exact;
                           ^^^^^ [1]
   record.js:5:9
   5| (exact: {foo: number}); // ERROR, missing bar
              ^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- record.js:10:2

Cannot cast `indexed` to object type because indexed `Record` [1] is incompatible with exact object type [2].
[incompatible-indexer]

   record.js:10:2
   10| (indexed: {foo: number}); // ERROR, missing indexer
        ^^^^^^^

References:
   record.js:8:24
    8| declare const indexed: Indexed;
                              ^^^^^^^ [1]
   record.js:10:11
   10| (indexed: {foo: number}); // ERROR, missing indexer
                 ^^^^^^^^^^^^^ [2]



Found 16 errors
